[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-usage-monitor"
version = "1.0.0"
description = "Real-time Claude API token usage monitor with advanced progress tracking"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Claude Code Usage Monitor", email = "noreply@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pytz",
]
requires-python = ">=3.8"

[project.scripts]
claude-usage-monitor = "ccusage_monitor:main"

[project.urls]
Homepage = "https://github.com/Maciek-roboblog/Claude-Code-Usage-Monitor"
Repository = "https://github.com/Maciek-roboblog/Claude-Code-Usage-Monitor"
Issues = "https://github.com/Maciek-roboblog/Claude-Code-Usage-Monitor/issues"

[tool.hatch.build.targets.wheel]
packages = ["ccusage_monitor.py"]

[tool.hatch.build.targets.sdist]
include = [
    "/ccusage_monitor.py",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.uv]
dev-dependencies = [
    "build",
    "twine",
]

[tool.uv.sources]

[build]
requires = ["hatchling"]
build-backend = "hatchling.build"